--- a/forum.html
+++ b/forum.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum - MTT</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="favicon.png" type="image/icon type">
+    <link rel="icon" href="assets/Quarkz-T.png" type="image/icon type">
+
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="watermark" style="display: flex; flex-direction: row;align-items: center;width:98vw;position: relative;">
         <span id="logo" style="font-family: Arial;font-size: 4vh;font-weight: bold; margin-left: 2vw;"><img
-                src="Quarkz.png" style="height:6vh;"></span>
+                src="/assets/Quarkz-WT.png" style="height:6vh;"></span>
         <!-- <span style="font-family:Arial;font-size:2vh; font-weight:bolder;">By MTT</span> -->
-        <span style="background-color: turquoise;border-radius: 100px;position: absolute;right:1vw;padding:1vh;"
-            id="dsh_btn" class="no-print" onclick = "window.location = 'index.html#/dashboard'">☰</span>
+        <span style="position: absolute;right:1vw" id="dsh_btn" class="no-print" onclick = "window.location = 'index.html#/dashboard'">☰</span>
     </div>
     <div id="forum" class="full_page flex_type">
         <span style="font-size: 5vh;color:yellow" id="fm_title">Forum</span>
