--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/contrib/auto-render.min.js"
         integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR"
         crossorigin="anonymous"></script>
-
+    
     <!-- Purification Of Marked JS-->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+    <!-- JQuerySupport For SummerNote-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+    <!-- SummerNote-->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
     <style>
         .full_page {
             display: none
@@ -37,7 +44,7 @@
     </style>
 </head>
 
-<body ondragstart="return false;" onselectstart="return false;" oncontextmenu="return false;">
+<body>
     <div id="overlay">
         <div id="overlay_div">
             <span id="ovr_logo"><img src="/assets/Quarkz_white.png" >
@@ -45,7 +52,6 @@
             </span>
         </div>
     </div>
-
     <div id="watermark">
         <span id="logo"><img id = "ovr_l_1" src="/assets/Quarkz-WT.png" style="height:6vh"><img style="height:6vh" id = "ovr_l_2" src="/assets/Quarkz.png"></span>
         <div id="w_holder">
@@ -141,46 +147,8 @@
                 <td class="sp_txt">Created On:</td>
                 <td id="prf_crton"></td>
             </tr>
-            <tr>
-                <td class="sp_txt">Profile Photo:</td>
-                <td>
-                    <div id="prf_pphoto" style="width:100px;height:100px;"></div>
-                    <button class="tst_btn rpl" id="prf_ava">Change Avatar</button>
-                </td>
-            </tr>
         </table>
     </div>
-    <div id="editprofile" class="full_page flex_type">
-        <span style="font-size: 5vh;">Edit Profile</span>
-        <table class="pro_table" style="border:lime 3px solid;">
-            <tr>
-                <td class="sp_txt">Name:</td>
-                <td><input id="ed_prf_name"></input></td>
-            </tr>
-            <tr>
-                <td class="sp_txt">Username:</td>
-                <td><input id="ed_prf_uname"></input></td>
-            </tr>
-            <tr>
-                <td class="sp_txt">Class:</td>
-                <td><input id="ed_prf_class"></td>
-                </td>
-            </tr>
-            <tr>
-                <td class="sp_txt">Gender:</td>
-                <td><input id="ed_prf_gender"></input></td>
-            </tr>
-            <tr style="">
-                <td class="sp_txt">Profile Photo:</td>
-                <td>
-                    <div id="prf_pphoto" style="width:100px;height:100px;"></div>
-                    <button class="tst_btn rpl" id="prf_ava">Change Avatar</button>
-                </td>
-            </tr>
-        </table>
-    </div>
-    </div>
-
     <div id="register" class="full_page flex_type">
         <span style="font-size:5vh;">Register</span>
         <input type="tel" id="rg_mbleno" class="_in_reg" placeholder="Mobile No">
@@ -251,6 +219,7 @@
             <div class="dshbox_v2 rpl" onclick="window.location.hash = '#/add/images'">Upload Images</div>
             <div class="dshbox_v2 rpl" onclick="window.location.hash = '#/add/tests'">Add Test</div>
             <div class="dshbox_v2 rpl" onclick="window.location.hash = '#/update/tests'">Update Test</div>
+            <div class="dshbox_v2 rpl" onclick="window.location.hash = '#/update/batch'">Update Batches</div>
         </div>
     </div>
     <div id="fu_uplimg" class="full_page flex_type" style="overflow-y: scroll;">
@@ -293,26 +262,22 @@
             <option value="statistics">Statistics</option>
             <option value="unfiled">Unfiled</option>
         </select>
-        <select name="type" id="aq_tpc_chaptername" class="_in_aq" style="color:red"></select>
         <div id="lqadd" style="display: flex;flex-direction: row;margin:10px;height: 50vh;">
             <div id="question_list"
-                style="border: 2px lime solid;width: 20vw;height:50vh;display: flex;flex-direction: column;align-items: center;text-align: center;font-size: 3vh;overflow-y: scroll;"
+                style="border: 2px lime solid;width: 15vw;height:50vh;display: flex;flex-direction: column;align-items: center;text-align: center;font-size: 3vh;overflow-y: scroll;"
                 class="title-notes"></span>
             </div>
             <div
-                style="border: 2px lime solid;width:70vw;display: flex;flex-direction: column;overflow-y: scroll;height:50vh;">
+                style="border: 2px lime solid;width:75vw;display: flex;flex-direction: column;overflow-y: scroll;height:50vh;">
                 <select name="type" id="aq_mode" class="_in_aq" style="color:red">
                     <option value="question">Question</option>
                     <option value="lesson">Lesson</option>
                 </select>
                 <div class="flex_type" id="aq_all" style="align-items: unset;">
-                    <textarea type="tel" id="aq_qtext" class="_in_aq" placeholder="Add A Question/Title"
-                        style="resize: none;overflow-y: scroll;height:20vh;"></textarea>
+                    <div class="summernote" id = "aq_qtext">Question</div>
                     <input type="answer" id="aq_answer" class="_in_aq" placeholder="Answer">
-                    <input type="url" id="aq_imgurl" class="_in_aq" placeholder="Image URL">
                     <input type="url" id="aq_yurl" class="_in_aq" placeholder="Youtube ID">
-                    <textarea type="answer" id="aq_expl" class="_in_aq" style="resize: none;overflow-y: scroll;"
-                        placeholder="Explanation Text"></textarea>
+                    <div class="summernote" id = "aq_expl">Explanation</div>
                     <textarea type="answer" id="aq_hint" class="_in_aq" style="resize: none;overflow-y: scroll;"
                         placeholder="Hint"></textarea>
 
@@ -353,7 +318,6 @@
                     <button class="tst_btn rpl" id="aq_ro">Remove Option</button>
                     <button class="tst_btn rpl" id="aq_ro">Remove Entry</button>
                 </div>
-                <div id="aq_renderer" style="border:hotpink solid 3px;width:80%;height:max-content;"></div>
             </div>
         </div>
         <button class="tst_btn rpl" id="aq_tpc_save">Save/Update Topic</button>
@@ -376,7 +340,7 @@
         <hr color="white" width="100%">
 
         <span style="font-size: 3vh;">You don't have access to this page.</span>
-        <span style="font-size: 2vh;">To Go To Dashboard Click On ☰ at the top</span>
+        <a class="tst_btn rpl" id="tt_save" href="/#/dashboard">Go To Dashboard</a>
     </div>
     <div id="dashboard" class="full_page flex_type" style="display: flex;flex-direction: row;">
         <div id="sidebar">
@@ -384,7 +348,7 @@
                 style="display: flex;flex-direction: row;align-items:center;height:50px;justify-content: space-evenly;width: 25vw;max-width: 250px;">
                 <span class="material-symbols-outlined rpl">settings</span>
                 <span class="material-symbols-outlined rpl" id="abt_btn">info</span>
-                <span class="material-symbols-outlined rpl">notifications</span>
+                <span class="material-symbols-outlined rpl" onclick="window.location = '#/update'">notifications</span>
                 <span class="material-symbols-outlined rpl" id="prf_btn">account_circle</span>
                 <span class="material-symbols-outlined rpl" id="lgt_btn">logout</span>
             </div>
@@ -412,8 +376,7 @@
                 <div class="dshbox_v2" id="cyb_btn">Cyberhunts</div>
                 <div id="adminonly" style="display:none;flex-direction:column;">
                     <div class="dshbox_v2" id="adi_btn">Admin Functions</div>
-                    <div class="dshbox_v2" id="pqb_btn" style="display: none;">Print</div>
-                    <div class="dshbox_v2" id="usc_btn" style="display: none;">Users</div>
+                    <div class="dshbox_v2" id="usc_btn">Users</div>
                 </div>
             </div>
             <hr style="width: 100%;">
@@ -537,7 +500,7 @@
         <span style="font-size: 5vh;">Test Instructions</span>
         <hr color="white" width="100%">
         <div style="width:80vw;overflow-y: scroll;border:yellow 3px solid;display: flex;flex-direction: column;">
-            <span style="font-size:5vh;">Please Read The Instructions And Terms Carefully</span>
+            <span style="font-size:5vh;text-align: center;">Please Read The Instructions And Terms Carefully</span>
             <ol>
                 <li>Total Duration of Examination is <span id="test_time">180 minutes.</span></li>
                 <li>The Exam Must Be Completed In 1 Sitting. You Will Be Able To Open It Once. </li>
@@ -555,7 +518,7 @@
                 <li>I agree that in case of not adhering to the instructions, I shall be liable to be debarred from this
                     Test and/or to disciplinary action, which may include ban from future Test / Examinations</li>
             </ol>
-            <span style="font-size:5vh;">👍 All The Best! 👍</span>
+            <span style="font-size:5vh;text-align: center;">👍 All The Best! 👍</span>
             <button class="tst_btn rpl" id="tin_start"
                 onclick='window.location.hash = "#/attempt/" + window.location.hash.split("#/instructions/")[1]'>Start</button>
         </div>
@@ -695,10 +658,6 @@
                         <div style="pointer-events: none;">
                             <div id="player" style="width:80%; height: 300px;"></div>
                         </div>
-
-                        <span id="watermark"
-                            style="top:40%; left:50%; z-index: 4;color: blue;position: absolute;font-family: Consolas; font-size: 20px;"><img
-                                src="assets/Quarkz-T.png" style="height:60px"></span>
                     </div>
 
                     <div id="toolbar"
@@ -725,7 +684,7 @@
                     </div>
                 </div>
                 <div>
-                    <div id="tp_expl" style="width:80%;height:max-content;min-height: 12vh;">Explanation</div>
+                    <div id="tp_expl" style="height:max-content;min-height: 12vh;text-align: left;">Explanation</div>
                     <img id="tp_lsimg">
                 </div>
             </center>
@@ -758,10 +717,11 @@
 
             <div>
                 <button class="tst_btn rpl" id="tp_sbm">Submit</button>
+                <div id = "tp_status"></div>
             </div>
-            <div id="tp_hint" style="width:80%;height:max-content;min-height: 12vh;display: none;">Hint</div>
-            <div id="tp_answer" style="width:80%;height:max-content;min-height: 12vh;display: none;">Answer</div>
-            <div id="tp_expl" style="width:80%;height:max-content;min-height: 12vh;display: none;">Explanation</div>
+            <div id="tp_hint" style="display: none;">Hint</div>
+            <div id="tp_e_answer" style="display: none;">Answer</div>
+            <div id="tp_expl" style="display: none;">Explanation</div>
         </div>
     </div>
     <div id="topiclist" class="full_page flex_type">
@@ -834,6 +794,10 @@
             <span style="font-size: 2vh;" id="sms_prov">Sim Name</span>
         </div>
     </div>
+    <div id="testing" class="full_page flex_type">
+        <div id="summernote">Hello Summernote</div>
+        <script>$(document).ready(function() {$('#summernote').summernote();});</script>
+    </div>
     <div id="cyberhunt" class="full_page flex_type">
         <div id="cyb_code" class="flex_type">
             <span style="font-size: 5vh;">Join Cyberhunt!</span>
@@ -850,9 +814,9 @@
     <div id="msg_popup" class="overlay">
         <div class="popup">
             <center>
-                <h2 id="msg_popup_txt">You Win!</h2>
+                <h2 id="msg_popup_txt">Note</h2>
             </center>
-            <a class="close" onclick="document.getElementById('msg_popup').style.visibility = 'none';document.getElementById('msg_popup').style.opacity = '0'">&times;</a>
+            <a class="close" onclick="document.getElementById('msg_popup').style.visibility = 'hidden';document.getElementById('msg_popup').style.opacity = '0'">&times;</a>
             <p id="msg_popup_content"></p>
         </div>
     </div>
