bug fix + legal update.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
     <div id="legal" class="full_page flex_type" style="text-align: center;">
         <span style="font-size: 5vh;">Terms And Conditions</span>
-        <span class="sp_txt">Copyright 2021-22 Quarkz By Mr Techtroid</span>
+        <span class="sp_txt">Copyright 2021-23 Quarkz By Mr Techtroid</span>
+        <span style ="font-size: 2vh;">Last Updated: 10 Jan 2023(IST)</span>
         <div id="lgl_container">
             <ol>
                 <h3>Account Information And User Generated Content</h3>
@@ -120,6 +121,12 @@
                     worldwide,non-exclusive,royalty-free,sub-licensable and transferable license to use, reproduce,
                     distribute, share, display, publish, retain, make available online and/or electronically transmit
                     such User-generated Content as well as technical information collected.</li>
+                <li>We also reserve the right to terminate access of our website to any account if we find 
+                    the account to do anything which violates our TOC without prior notice.</li>
+                <li>By Creation of account on this site, you agree that you are above 13 Years and if you are below that age you have 
+                    taken permission from your guardians or parents. We Do not collect any type of information from the minors
+                     and if we do so, we do not do it intentionally and we may be requested to delete the information by their 
+                     guardians which we will do immediately. </li>
                 <h3>Free Use Disclaimer</h3>
                 <li>Copyright Disclaimer under section 107 of the Copyright Act 1976, allowance is made for “fair use”
                     for purposes such as criticism, comment, news reporting, teaching, scholarship, education and
@@ -129,9 +136,13 @@
                         class="sp_txt">quarkz.netlify.app</span> or any of Our Storage services such as Firebase, is
                     part of Quarkz.Any Usage, Reproduction of Any Of The same Without Prior Consent Of Owner Mr
                     Techtroid OR Quarkz Team Is Prohibited.</li>
+                
                 <li>Youtube Videos Which Are Used In This Website Belong To Their Respective Channel Owners</li>
                 <li>Usage Of Questions And Notes Are From Fair Use Under Education,Teaching And Research Category</li>
                 <li>Simulations Used In This Website Belong To The Respective Providers Mentioned</li>
+                <li>If You Feel Any Content is violating your Copyright and want it to be removed from this site, contact us at the contact us page. We will make sure that we will remove the content in 24 Hours.</li>
+                <h3>Others</h3>
+                <li>These Rules/Terms may be changed without prior consent of any party/(users using the site) at any time.</li>
             </ol>
         </div>
 
@@ -416,7 +427,7 @@
                 </div>
             </div>
             <hr style="width: 100%;">
-            <span style="font-size: small;">© 2021-22 Quarkz!</span>
+            <span style="font-size: small;">© 2021-23 Quarkz!</span>
         </div>
         <div style="display: flex;">
             <div id="db_exam_info">
