add Recovery Methods

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <title>Quarkz!</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="assets/Quarkz-T.png" type="image/icon type">
@@ -27,9 +26,6 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/contrib/auto-render.min.js"
         integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR"
         crossorigin="anonymous"></script>
-
-    <!-- Purification Of Marked JS-->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
     <!-- JQuerySupport For SummerNote-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -136,7 +132,6 @@
                         class="sp_txt">quarkz.netlify.app</span> or any of Our Storage services such as Firebase, is
                     part of Quarkz.Any Usage, Reproduction of Any Of The same Without Prior Consent Of Owner Mr
                     Techtroid OR Quarkz Team Is Prohibited.</li>
-                
                 <li>Youtube Videos Which Are Used In This Website Belong To Their Respective Channel Owners</li>
                 <li>Usage Of Questions And Notes Are From Fair Use Under Education,Teaching And Research Category</li>
                 <li>Simulations Used In This Website Belong To The Respective Providers Mentioned</li>
@@ -145,17 +140,16 @@
                 <li>These Rules/Terms may be changed without prior consent of any party/(users using the site) at any time.</li>
             </ol>
         </div>
-
-
     </div>
+
     <div id="schedule" class="full_page flex_type">
         <span style="font-size: 5vh;">Schedule</span>
         <iframe id="tmt_frame" src="" style="border: 0" width="100%" height="90%" frameborder="0" scrolling="no"
             style="background-color: black;color:white"></iframe>
     </div>
-    <div id="profile" class="full_page flex_type" style="justify-content: center;">
+    <div id="profile" class="full_page flex_type">
         <span style="font-size: 5vh;">Profile</span>
-        <table class="pro_table" style="border:lime 3px solid;">
+        <table class="pro_table" style="border:gray 3px solid;">
             <tr>
                 <td class="sp_txt">Name:</td>
                 <td id="prf_name"></td>
@@ -185,6 +179,7 @@
                 <td id="prf_crton"></td>
             </tr>
         </table>
+        <button id="pass_rst_btn" class="tst_btn rpl">Reset/Change Password</button>
     </div>
     <div id="register" class="full_page flex_type">
         <span style="font-size:5vh;">Register</span>
