add basic test reports

--- a/index.html
+++ b/index.html
@@ -588,7 +588,6 @@
                 <hr>
                 <div style="" id="tt_qtitle">Who Is The President Of India?</div>
                 <hr>
-
             </div>
             <div id="tt_footer" style="display:flex;">
                 <button class="tst_btn rpl" id="tt_save">Save</button>
@@ -705,15 +704,15 @@
             <center>
                 <div id="tp_full_vid">
                     <div
-                        style="text-align:center; top: 50%; z-index: 2; border-style: solid; border-color: lime;border-width: 3px; width: 80%">
-                        <!-- <iframe id = "video" style = "width:80%; height: 450px; border-style: solid; border-color: lime;border-width: 10px;" hidden = "True"  allow = "autoplay"></iframe> -->
-                        <div style="pointer-events: none;">
-                            <div id="player" style="width:80%; height: 300px;"></div>
+                        style="">
+                        <!-- <iframe id = "video" style = "width:80%; height: 450px; border-style: solid; ;border-width: 10px;" hidden = "True"  allow = "autoplay"></iframe> -->
+                        <div style="pointer-events: none;width:80vw;height: 400px;">
+                            <div id="player" style="height: 80%;width: 100%;"></div>
                         </div>
                     </div>
 
                     <div id="toolbar"
-                        style="text-align:center;border-style: solid; border-color: lime; z-index: 3;width:80%;color: white;">
+                        style="align-items: center; z-index: 3;width:68vw;color: white;border-radius: 0px 0px 12px 12px;display:flex;flex-direction:row;justify-content: space-evenly;width:30vw">
                         <span class="material-icons" id="tp_bw_btn" onclick="player.seekTo(player.getCurrentTime()-10)"
                             title="-10 Seconds">fast_rewind</span>
                         <span class="material-icons" id="tp_pl_btn" title="Play"
